--- a/user-app/src/main/res/layout/item_vb_product.xml
+++ b/user-app/src/main/res/layout/item_vb_product.xml
@@ -113,7 +113,7 @@
             android:id="@+id/non_zero_qty_group"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="visible"
+            android:visibility="gone"
             app:constraint_referenced_ids="btn_dec,current_qty" />
 
         <ImageButton
@@ -122,12 +122,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:visibility="visible"
+            android:contentDescription="@string/dropdown_button"
             app:layout_constraintStart_toEndOf="@+id/variants"
             app:layout_constraintTop_toBottomOf="@+id/vb_product_name"
             app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24"
-            app:tint="@color/black"
-            android:contentDescription="@string/dropdown_button" />
+            app:tint="@color/black" />
 
 
         <com.google.android.material.chip.ChipGroup
