--- a/user-app/src/main/res/layout/item_wb_product.xml
+++ b/user-app/src/main/res/layout/item_wb_product.xml
@@ -1,30 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:cardCornerRadius="15dp"
-    android:elevation="8dp"
-    android:layout_margin="8dp">
-
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="8dp">
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp">
 
 
         <ImageView
             android:id="@+id/image_wb_product"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
             android:adjustViewBounds="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -32,17 +21,25 @@
             app:srcCompat="@drawable/apple"
             android:contentDescription="@string/image_of_item" />
 
+        <ProgressBar
+            android:id="@+id/imgLoader"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:indeterminate="true"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/wb_product_name"
             style="@style/TextAppearance.MaterialComponents.Headline6"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:text="@string/apple"
-            app:layout_constraintEnd_toStartOf="@+id/qty_wb"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintEnd_toStartOf="@+id/barrier"
             app:layout_constraintStart_toEndOf="@+id/image_wb_product"
             app:layout_constraintTop_toTopOf="parent"
             android:marqueeRepeatLimit="marquee_forever"
@@ -51,7 +48,7 @@
             android:focusable="true"/>
 
         <TextView
-            android:id="@+id/variants"
+            android:id="@+id/subtitle"
             style="@style/TextAppearance.MaterialComponents.Subtitle1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -62,17 +59,15 @@
             app:layout_constraintTop_toBottomOf="@+id/wb_product_name" />
 
 
-        <ImageView
+        <ImageButton
             android:id="@+id/btn_edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="24dp"
+            style="@style/imageButton"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:src="@drawable/ic_edit"
+            android:contentDescription="@string/edit_button"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_edit"
-            app:tint="@color/design_default_color_primary"
-            android:contentDescription="@string/edit_button" />
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
             android:id="@+id/qty_wb"
@@ -86,34 +81,34 @@
             app:layout_constraintTop_toTopOf="@+id/btn_edit" />
 
         <androidx.constraintlayout.widget.Barrier
+            android:id="@+id/barrier"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:barrierDirection="left"
-            app:constraint_referenced_ids="btn_edit,qty_wb"
-            tools:layout_editor_absoluteX="411dp" />
+            app:constraint_referenced_ids="btn_add" />
 
         <androidx.constraintlayout.widget.Group
             android:id="@+id/non_zero_qty_group"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="invisible"
+            android:visibility="gone"
             app:constraint_referenced_ids="btn_edit,qty_wb" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/btn_add"
+            style="@style/imageButton"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_baseline_add_24"
+            android:contentDescription="@string/add_button" />
+
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/zero_qty_group"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="24dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@+id/qty_wb"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/ic_baseline_add_24"
-            app:tint="@color/design_default_color_primary"
-            android:contentDescription="@string/add_button" />
+            app:constraint_referenced_ids="btn_add" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
