--- a/user-app/src/main/res/layout/activity_main.xml
+++ b/user-app/src/main/res/layout/activity_main.xml
@@ -11,10 +11,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/cartSummary"/>
 
     <FrameLayout
         android:id="@+id/cartSummary"
@@ -26,7 +27,7 @@
         android:gravity="bottom"
         android:orientation="horizontal"
         android:padding="8dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
